<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="35sp"
        android:textStyle="bold" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:fontFamily="sans-serif"
        android:text="@string/name_question_start"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/textColor"
        android:hint="@string/name_hint"
        android:inputType="textCapWords"
        android:textColor="@color/textColor"
        android:textColorHighlight="@color/textColor"
        android:textColorHint="@color/textColor"
        android:textColorLink="@color/textColor" />

    <Button
        android:id="@+id/startQuiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@color/textColor"
        android:gravity="center"
        android:onClick="openQuizActivity"
        android:text="@string/start_quiz"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>